Issue #2137219 by johnv: Fixed warning for workflow_actions.
Issue #2146411 by johnv: Reverted cache for workflow_node_current_state.
Issue #2137149 by johnv: Fixed double code in Transition->execute().
Issue #2146411 by johnv: Fixed workflow_node_previous_state.
Issue #2065799 by johnv: Added WorkflowState->count() to count nodes per State.
Issue #2137149 by johnv: Changed 'workflow_options' to 'workflow_sid' in workflow_transition_form().
Issue #2146411 by johnv: Fixed old&new state in Rules integration.
Issue #2137149 by johnv: Fixed constructor of WorkflowTransition.
Issue #2137149 by johnv: Added README.txt for Workflow_rules.
Issue #2115671 by johnv: Changed workflow_views to Views 3 API structure.
Issue #2019345 by johnv: Fixed selection of Options in Workflow object.
Issue #658880 by johnv: Added filter on CreationState and Workflow in worklow_views_handler_filter_sid.
Issue #2137149 by johnv: Fixed constructor of WorkflowTransition.
Issue #1021126 by johnv: Fixed 'Workflow: state' Views Filter doesn't handle nodes without a workflow state.
Issue #2147511 by johnv: Removed Views filters/fields/etc for {workflow_node} when module Worflow Node disabled.
Issue #2147535 by johnv: Added Views filter and field for 'Transition: old sid', to complent existing 'new sid'.
Issue #2147535 by johnv: Added More Views filter/field/sort for 'Workflow: current transition'.
Issue #2147673 by johnv: Marked 'workflow: states' field and sort as deprecated: should be implemented using a relationship.
Issue #2019345 by johnv: Renamed _workflow_view_workflow_get_state_name() to workflow_get_sid_label().
Issue #2130783 by johnv: Added formatter 'count entities with this state' to 'Workflow: state' Views Field.
Issue #2019345 by johnv: Added workflow_get_wid_label().
Issue #2019345 by johnv: Fixed workflow_get_states() in workflow_admin_ui.
Issue #1589254 by fedia.io1: Fixed Rename D6 hook_features_export_rebuild() to D7 hook_features_rebuild().