@@ -325,3 +325,4 @@ Issue #2130783 by johnv: Added formatter 'count entities with this state' to 'Wo
 Issue #2019345 by johnv: Added workflow_get_wid_label().
 Issue #2019345 by johnv: Fixed workflow_get_states() in workflow_admin_ui.
 Issue #1589254 by fedia.io1: Fixed Rename D6 hook_features_export_rebuild() to D7 hook_features_rebuild().
+Issue #2019345 by johnv: Renamed Workflow->getOptions() to workflow_get_state_names().
